# enigmind

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client-tui/: Cargo.toml
client-tui/src/: draw.rs  game_data.rs  input.rs  main.rs
client/src/: main.rs
lib/: Cargo.toml
lib/src/: code.rs  column.rs  columns.rs  criteria.rs  criterias.rs  error.rs  lib.rs  rule.rs  rules.rs  setup.rs  term_format.rs  verifier.rs
lib/tests/: lib.rs
server/: Cargo.toml
server/src/: main.rs
