[package]
name = "enigmind-client"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigmind-lib = { path = "../lib" }
tokio = { version = "1.22.0", features = ["full"] }
axum = "0.5.17"
anyhow = "1.0.66"
serde = "1.0.147"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.89"
