[package]
name = "enigmind-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigmind-lib = { path = "../lib" }
tokio = { version = "1.22.0", features = ["full"] }
axum = "0.5.17"
anyhow = "1.0.66"
